--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "ioredis": "^4.26.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
-    "puppeteer": "^8.0.0"
+    "puppeteer": "^8.0.0",
+    "redis": "^3.1.1"
   }
 }
