--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "mysql2": "^2.3.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
