--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "when-can-i-eat",
-  "version": "0.0.0",
+  "name": "when-eat",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.0",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "ioredis": "^4.26.0",
-    "morgan": "~1.9.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.7",
-    "puppeteer": "^8.0.0",
-    "redis": "^3.1.1"
+    "axios": "^1.3.4",
+    "cheerio": "1.0.0-rc.12",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
