--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "cheerio": "1.0.0-rc.12",
+    "dotenv": "^16.0.3",
+    "mysql2": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
