--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mysql2": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
