--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Stop Systemd Service
         run: |
-          ssh -i ~/.ssh/id_rsa "$SSH_USER"@"$REMOTE_VM_IP" 'sudo systemctl stop when-eat'
+          ssh -i ~/.ssh/id_rsa "$SSH_USER"@"$REMOTE_VM_IP" 'systemctl --user stop when-eat'
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_VM_IP: ${{ secrets.REMOTE_VM_IP }}
@@ -49,7 +49,7 @@ jobs:
 
       - name: Restart Systemd Service
         run: |
-          ssh -i ~/.ssh/id_rsa "$SSH_USER"@"$REMOTE_VM_IP" 'sudo systemctl restart when-eat'
+          ssh -i ~/.ssh/id_rsa "$SSH_USER"@"$REMOTE_VM_IP" 'systemctl --user restart when-eat'
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_VM_IP: ${{ secrets.REMOTE_VM_IP }}
